"FIX: Scripts and Scrollbars

--- a/client/src/components/layout/UserArea/Calendar/CalendarArea.css
+++ b/client/src/components/layout/UserArea/Calendar/CalendarArea.css
@@ -138,6 +138,7 @@ main {
 	flex: 1;
 	height: 100%;
 	padding-bottom: 1rem;
+	scrollbar-width: none;
 }
 
 .calendar .body .cell::-webkit-scrollbar {
@@ -198,6 +199,7 @@ main {
 	-moz-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.75);
 	box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.75);
 	transition: opacity 0.2s, visibility 0.2s;
+	scrollbar-width: none;
 }
 
 .addEditWrapperCalendar::-webkit-scrollbar {
@@ -226,6 +228,7 @@ main {
 .dateEvents {
 	height: 90px;
 	overflow-y: scroll;
+	scrollbar-width: none;
 }
 
 .dateEvents::-webkit-scrollbar {
