--- a/client/src/components/layout/UserArea/Flashcards/Flashcards.css
+++ b/client/src/components/layout/UserArea/Flashcards/Flashcards.css
@@ -21,6 +21,7 @@
 	overflow-y: scroll;
 	background-color: var(--border-color);
 	padding: 0 1rem;
+	scrollbar-width: none;
 }
 
 .browseFlashArea::-webkit-scrollbar {
@@ -49,6 +50,7 @@
 	-webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.75);
 	-moz-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.75);
 	box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.75);
+	scrollbar-width: none;
 }
 
 .addEditWrapper.active {
